--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -6,3 +6,13 @@
   -fx-border-style: solid;
   -fx-border-color: black;
 }
+
+.tickerDisplay {
+  -fx-background-color: #9c9c9c;
+  -fx-border-style: solid;
+  -fx-border-radius: 4px;
+  -fx-border-color: black;
+  -fx-spacing: 10;
+  -fx-padding: 10;
+  -fx-margin: 10;
+}
