--- a/src/main/resources/Green.css
+++ b/src/main/resources/Green.css
@@ -1,10 +1,11 @@
 /*
 Color palette:
- #38686A
- #829081
- #A3B4A2
- #CDC6AE
-
+ DARK       = #38686A =>
+ MEDIUM     = #829081 =>
+ LIGHT      = #A3B4A2 =>
+ IN BETWEEN = #d4d4d1 =>
+ LIIIGHT    = #d9e0d9 =>
+ BACKGROUND = #DCDCDC =>
 */
 .controlPanelButton {
   -fx-display: block;
@@ -25,33 +26,51 @@ Color palette:
 }
 .tickerDisplay {
   -fx-display: block;
-  -fx-width: 95%;
-  -fx-height: 95%;
   -fx-border: none;
   -fx-background-color: #A3B4A2;
-  -fx-color: black;
+  -fx-color: #333333;
   -fx-border-radius: 6px;
   -fx-border-color: #829081;
   -fx-text-align: center;
   -fx-text-decoration: none;
   -fx-display: inline-block;
-  -fx-font-size: 12px;
-}
-.controlPanelButton:hover {
-  -fx-color: white;
-  -fx-border-color: #38686A;
-  -fx-border: solid;
-
-}
-.splitRightTopInside {
+  -fx-font-size: 18px;
   -fx-spacing: 20;
   -fx-padding: 20;
   -fx-margin: 20;
 }
+
 .theme {
   -fx-background: #DCDCDC;
   -fx-font-family: system-ui;
 }
 .dateLabel {
   -fx-font-size: 18px;
+}
+.ButtonLabel {
+  -fx-font-size: 22px;
+}
+.ButtonLabel:hover {
+  -fx-text-fill: #cc2900;
+}
+
+.list-viw {
+  -fx-font-size: 18px;
+}
+
+.list-view .list-cell:odd {
+    -fx-background-color: #DCDCDC;
+}
+
+.list-view .list-cell:even {
+    -fx-background-color: #d4d4d1;
+}
+.list-view .list-cell:selected:odd,
+.list-view .list-cell:selected:even {
+    -fx-background-color: #38686A;
+}
+.flowpane {
+  -fx-spacing: 10;
+  -fx-padding: 10;
+  -fx-margin: 10;
 }
