--- a/src/main/resources/Gray.css
+++ b/src/main/resources/Gray.css
@@ -8,16 +8,11 @@ Color palette:
  BACKGROUND = #DCDCDC =>
 */
 .controlPanelButton {
-  -fx-display: block;
-  -fx-width: 100%;
-  -fx-height: 70px;
-  -fx-border: none;
   -fx-background-color: #b0b0b0;
   -fx-color: black;
   -fx-border-radius: 4px;
   -fx-border-color: #848484;
   -fx-text-align: center;
-  -fx-text-decoration: none;
   -fx-display: inline-block;
   -fx-font-size: 16px;
 }
@@ -54,10 +49,6 @@ Color palette:
   -fx-text-fill: #cc2900;
 }
 
-.list-viw {
-  -fx-font-size: 18px;
-}
-
 .list-view .list-cell:odd {
     -fx-background-color: #DCDCDC;
 }
@@ -73,4 +64,8 @@ Color palette:
   -fx-spacing: 10;
   -fx-padding: 10;
   -fx-margin: 10;
+}
+
+.list-cell {
+  -fx-font-size: 18px;
 }
