--- a/src/main/resources/Light.css
+++ b/src/main/resources/Light.css
@@ -7,17 +7,15 @@ Color palette:
  LIIIGHT    = #ffffff =>  #ffffff
  BACKGROUND = #DCDCDC =>
 */
+* {
+  -fx-text-fill: black;
+}
 .controlPanelButton {
-  -fx-display: block;
-  -fx-width: 100%;
-  -fx-height: 70px;
-  -fx-border: none;
   -fx-background-color: #ededed;
   -fx-color: black;
   -fx-border-radius: 4px;
   -fx-border-color: #c6c6c6;
   -fx-text-align: center;
-  -fx-text-decoration: none;
   -fx-display: inline-block;
   -fx-font-size: 16px;
 }
@@ -54,9 +52,6 @@ Color palette:
   -fx-text-fill: #cc2900;
 }
 
-.list-viw {
-  -fx-font-size: 18px;
-}
 
 .list-view .list-cell:odd {
     -fx-background-color: #DCDCDC;
@@ -73,4 +68,7 @@ Color palette:
   -fx-spacing: 10;
   -fx-padding: 10;
   -fx-margin: 10;
+}
+.list-cell {
+  -fx-font-size: 18px;
 }
